Remove test tooltips

--- a/mda-report.html
+++ b/mda-report.html
@@ -145,15 +145,7 @@
       name: "Endemic IUs",
       type: rowTypes.DATA,
       cells: [
-        {
-          dn: "TCMDA - Endemic IUs",
-          // TODO: Remove this when done testing
-          tooltips: [
-            { type: tooltipTypes.INFO, message: "Example info tooltip" },
-            { type: tooltipTypes.ERROR, message: "Example error tooltip" },
-            { type: tooltipTypes.WARNING, message: "Example warning tooltip" },
-          ],
-        },
+        { dn: "TCMDA - Endemic IUs" },
         { dn: "LFMDA - Endemic IUs" },
         null,
         null,
