--- a/mda-report.html
+++ b/mda-report.html
@@ -1679,7 +1679,7 @@
     const link = document.createElement("a");
     link.setAttribute("href", encodedUri);
     link.setAttribute("download", "mda_report.csv");
-    document.body.appendChild(link); // Required for FF
+    window.frameElement.parentNode.appendChild(link); // Bypasses chrome sandboxed iframe restrictions
 
     link.click(); // This will download the data file named "mda_report.csv".
   }
