Add a little spacing

--- a/mda-report.html
+++ b/mda-report.html
@@ -1722,7 +1722,7 @@
   });
 </script>
 
-<div>
+<div class="p-1">
   <!-- HTML Markup to make up report -->
   <div class="d-flex pr-2 align-items-center justify-content-between">
     <h1>MDA Treatment Summary</h1>
